# LeWM-X-ClimateBench

./: .gitignore  README.md
LeClim/: .gitignore  pyproject.toml
LeClim/climatebench_lewm/: __init__.py  cli.py  convert.py  decoder.py  evaluate_climatebench.py  train_decoder.py
LeClim/config/train/: climatebench_lewm.yaml
LeClim/config/train/data/: climatebench.yaml
LeClim/scripts/: climatebench_to_lewm_hdf5.py  latent_rollout_curve.py  plot_lightning_metrics.py  plot_tas_globe.py
LeClim/tests/: test_convert_real.py  test_eval_metrics.py  test_hdf5_schema.py  test_imports.py
