[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leclim"
version = "0.1.0"
description = "ClimateBench adapters for LeWorldModel experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "xarray>=2023.1",
    "netcdf4>=1.6",
    "h5py>=3.10",
    "hdf5plugin>=3.0",
    "stable-worldmodel>=0.0.6",
]

[project.scripts]
climatebench-to-lewm-hdf5 = "climatebench_lewm.cli:main"
train-climatebench-decoder = "climatebench_lewm.train_decoder:main"
evaluate-climatebench = "climatebench_lewm.evaluate_climatebench:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "matplotlib>=3.8"]
decoder = [
    "torch",
    "torchvision",
    "stable-pretraining",
]
climate-viz = ["cartopy>=0.23", "matplotlib>=3.8"]
lewm-train = [
    "einops>=0.7",
    "lightning>=2.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "stable-pretraining",
    "transformers>=4.40",
    "torch",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
